--- a/public/notes.html
+++ b/public/notes.html
@@ -12,15 +12,15 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
   <body>
     <nav class="navbar bg-info">
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
-        <i class="fas fa-save text-light save-note"></i>
-        <i class="fas fa-plus text-light new-note"></i>
+        <i id="save-note" class="fas fa-save text-light save-note"></i>
+        <i id="new-note" class="fas fa-plus text-light new-note"></i>
       </div>
     </nav>
     <div class="container-fluid">
@@ -32,6 +32,7 @@
         </div>
         <div class="col-8">
           <input
+            id="note-title"
             class="note-title"
             placeholder="Note Title"
             maxlength="28"
